// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Utbetalinger with kontonummer renders correctly 1`] = `
<DocumentFragment>
  <div
    class="box__wrapper"
    id="utbetaling"
  >
    <div
      class="navds-guide-panel navds-guide-panel--poster"
    >
      <div
        class="navds-guide"
      >
        <div
          class="navds-guide__illustration navds-guide__illustration--medium"
        >
          <img
            alt="Veileder"
            class="box__ikon"
            src="Kontonummer.svg"
          />
        </div>
      </div>
      <div
        class="navds-guide-panel__content"
      >
        <div
          class="box__container"
        >
          <div
            class="box__header"
          >
            <div
              class="box__title-container"
            >
              <div
                class="box__line"
              />
              <h2
                class="box__title navds-heading navds-heading--medium"
              >
                Kontonummer for utbetaling
              </h2>
              <div
                class="box__line"
              />
            </div>
            <a
              class="navds-link anchor-link"
              href="#utbetaling"
            >
              <img
                alt=""
                src="AnchorLink.svg"
              />
              Lenke hit
            </a>
          </div>
          <div
            class="box__content"
          >
            <ul
              class="list-column-2"
            >
              <li>
                <div
                  class="listelement__header"
                >
                  <p
                    class="navds-label"
                  >
                    Kontonummer
                  </p>
                </div>
                <div
                  class="content "
                >
                  1234 56 78911
                </div>
                <p
                  class="navds-body-short"
                />
              </li>
            </ul>
            <div
              class="kilde__container"
            >
              <button
                class="kilde__knapp knapp-med-ikon navds-button navds-button--tertiary navds-button--medium"
              >
                <span
                  aria-live="polite"
                  class="navds-label"
                >
                  <span
                    class="kilde__icon"
                  >
                    <img
                      alt="Ekstern lenke"
                      src="Pencil.svg"
                    />
                  </span>
                  <p
                    class="navds-body-long"
                  >
                    Endre
                  </p>
                </span>
              </button>
              <div
                class="kilde__tekst"
              >
                <p
                  class="navds-detail"
                >
                  Kilde: NAV
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Utbetalinger with utenlandsk bank renders correctly 1`] = `
<DocumentFragment>
  <div
    class="box__wrapper"
    id="utbetaling"
  >
    <div
      class="navds-guide-panel navds-guide-panel--poster"
    >
      <div
        class="navds-guide"
      >
        <div
          class="navds-guide__illustration navds-guide__illustration--medium"
        >
          <img
            alt="Veileder"
            class="box__ikon"
            src="Kontonummer.svg"
          />
        </div>
      </div>
      <div
        class="navds-guide-panel__content"
      >
        <div
          class="box__container"
        >
          <div
            class="box__header"
          >
            <div
              class="box__title-container"
            >
              <div
                class="box__line"
              />
              <h2
                class="box__title navds-heading navds-heading--medium"
              >
                Kontonummer for utbetaling
              </h2>
              <div
                class="box__line"
              />
            </div>
            <a
              class="navds-link anchor-link"
              href="#utbetaling"
            >
              <img
                alt=""
                src="AnchorLink.svg"
              />
              Lenke hit
            </a>
          </div>
          <div
            class="box__content"
          >
            <ul
              class="list-column-2"
            >
              <li>
                <h3
                  class="navds-heading navds-heading--small"
                >
                  Bank
                </h3>
                <p
                  class="navds-body-short"
                >
                  Dominion Bank
                </p>
                <p
                  class="navds-body-short"
                >
                  Forente Arabiske Emirater
                </p>
              </li>
              <li>
                <div
                  class="listelement__header"
                >
                  <p
                    class="navds-label"
                  >
                    Kontonummer / IBAN
                  </p>
                </div>
                <div
                  class="content "
                >
                  AE460090000000123456789
                </div>
                <p
                  class="navds-body-short"
                />
              </li>
              <li>
                <div
                  class="listelement__header"
                >
                  <p
                    class="navds-label"
                  >
                    Valuta
                  </p>
                </div>
                <div
                  class="content "
                >
                  Amerikansk dollar
                </div>
                <p
                  class="navds-body-short"
                />
              </li>
              <li>
                <div
                  class="listelement__header"
                >
                  <p
                    class="navds-label"
                  >
                    BIC / SWIFT-kode
                  </p>
                </div>
                <div
                  class="content "
                >
                  EBILAEADXXX
                </div>
                <p
                  class="navds-body-short"
                />
              </li>
            </ul>
            <div
              class="kilde__container"
            >
              <button
                class="kilde__knapp knapp-med-ikon navds-button navds-button--tertiary navds-button--medium"
              >
                <span
                  aria-live="polite"
                  class="navds-label"
                >
                  <span
                    class="kilde__icon"
                  >
                    <img
                      alt="Ekstern lenke"
                      src="Pencil.svg"
                    />
                  </span>
                  <p
                    class="navds-body-long"
                  >
                    Endre
                  </p>
                </span>
              </button>
              <div
                class="kilde__tekst"
              >
                <p
                  class="navds-detail"
                >
                  Kilde: NAV
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
